Fixed the learning rate annealing

--- a/nbs/dl2/04_callbacks.ipynb
+++ b/nbs/dl2/04_callbacks.ipynb
@@ -776,14 +776,18 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
-     "output_type": "stream",
      "text": [
-      "Converted 04_callbacks.ipynb to exp/nb_04.py\r\n"
-     ]
+      "  File \"notebook2script.py\", line 55\r\n    fname_out = f'nb_{fname.stem.split(\"_\")[0]}.py'\r\n                                                  ^\r\nSyntaxError: invalid syntax\r\n"
+     ],
+     "output_type": "stream"
     }
    ],
    "source": [
