--- a/nbs/dl2/07D_TEACHER_REFACTOR.ipynb
+++ b/nbs/dl2/07D_TEACHER_REFACTOR.ipynb
@@ -10,10 +10,13 @@
    },
    "outputs": [],
    "source": [
+    "import fire as fire\n",
     "import torch\n",
+    "from torch.utils.data import DataLoader\n",
     "from nbs.dl2.exp.nb_02 import getMnistData\n",
+    "from nbs.dl2.exp.nb_03 import createDataLoaders\n",
     "from nbs.dl2.exp.nb_05 import cosineScheduler\n",
-    "from nbs.dl2.exp.nb_06 import normalizeVectors\n",
+    "from nbs.dl2.exp.nb_06 import normalizeVectors, exportNotebook\n",
     "import torch.nn.functional as Functional\n",
     "%matplotlib inline"
    ]
@@ -35,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -48,7 +51,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 13
+     "execution_count": 3
     }
    ],
    "source": [
@@ -60,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -76,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -89,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -102,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -198,16 +201,33 @@
     "        self._epochAccuracy = 0.\n",
     "        self._epochLoss = 0.\n",
     "        self._numberOfBatches = 0\n",
+    "        self._batchSize = 1.\n",
+    "        self._totalBatchesPerEpoch = 1.\n",
+    "        self._currentBatch = 1.\n",
+    "        self._totalTrainingBatches = -1\n",
+    "    \n",
     "        self._accuracyFunction = accuracyFunction\n",
     "        self._name = name\n",
+    "    def preModelTeach(self, model, epochs):\n",
+    "        super().preModelTeach(model, epochs)\n",
+    "        self._totalTrainingBatches = -1\n",
     "\n",
-    "    def preEpoch(self, epoch, dataLoader):\n",
+    "    def preEpoch(self, epoch, dataLoader: DataLoader):\n",
     "        super().preEpoch(epoch, dataLoader)\n",
     "        self._numberOfBatches = len(dataLoader)\n",
-    "        self._epochAccuracy, self._epochLoss = 0., 0.\n",
+    "        self._epochAccuracy, self._epochLoss, self._currentBatch = 0., 0., 0.\n",
+    "        self._batchSize = dataLoader.batch_size\n",
+    "        self._totalBatchesPerEpoch = self._numberOfBatches\n",
+    "        if self._totalTrainingBatches < 1:\n",
+    "            self._totalTrainingBatches = self._totalEpochs * self._totalBatchesPerEpoch \n",
+    "            \n",
+    "    def calculateCurrentProgress(self):\n",
+    "        return ((self._currentBatch + self._totalBatchesPerEpoch * self._currentEpoch) /\n",
+    "                self._totalTrainingBatches) - 1e-6\n",
     "\n",
     "    def postBatchEvaluation(self, predictions, validationData):\n",
     "        super().postBatchEvaluation(predictions, validationData)\n",
+    "        self._currentBatch += 1\n",
     "        self._epochAccuracy += self._accuracyFunction(predictions, validationData)\n",
     "\n",
     "    def postBatchLossConsumption(self, loss):\n",
@@ -667,9 +687,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.Javascript object>",
+      "application/javascript": "{\nconst ip = IPython.notebook\nif (ip) {\n    ip.save_notebook()\n    console.log('a')\n    const s = `!python notebook2script.py ${ip.notebook_name}`\n    if (ip.kernel) { ip.kernel.execute(s) }\n}\n}"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "exportNotebook()"
    ]
@@ -679,7 +712,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
