Added weight decay.

--- a/nbs/dl2/09_OPTIMIUS_PRIME.ipynb
+++ b/nbs/dl2/09_OPTIMIUS_PRIME.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "outputs": [],
    "source": [
     "%matplotlib inline\n"
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "outputs": [],
    "source": [
     "xTraining, yTraining, xValidation, yValidation = getMnistData()\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "outputs": [],
    "source": [
     "assertNearZero(xTrainingNormalized.mean())\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "outputs": [],
    "source": [
     "layerSizes = [8, 16, 32, 64, 64]\n",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "outputs": [],
    "source": [
     "trainingDataSet, validationDataSet = Dataset(xTrainingNormalized[:10000], yTraining[:10000]), Dataset(xValidationNormalized[:10000], yValidation[:10000])\n",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "outputs": [],
    "source": [
     "class ProcessCancellationException(Exception): pass"
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "outputs": [],
    "source": [
     "def composeFunctions(funInput, functions): \n",
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "outputs": [],
    "source": [
     "result = composeFunctions(0, [\n",
@@ -165,12 +165,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "outputs": [],
    "source": [
     "@dataclass\n",
     "class HyperParameters:\n",
-    "    learningRate: float"
+    "    weightDecay: float = 0.\n",
+    "    learningRate: float = 1e-1"
    ],
    "metadata": {
     "collapsed": false,
@@ -182,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "outputs": [],
    "source": [
     "#export\n",
@@ -200,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "outputs": [],
    "source": [
     "result = flatMap(lambda n: list(map(lambda _: n+1, range(n+1))), \n",
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "outputs": [],
    "source": [
     "class OptimizationFunction:\n",
@@ -241,6 +242,32 @@
     "                 modelLayer, \n",
     "                 hyperParameters: HyperParameters):\n",
     "        modelLayer.data.add_(-hyperParameters.learningRate, modelLayer.grad.data)\n",
+    "        return super().__call__(modelLayer, hyperParameters)\n",
+    "    \n",
+    "class WeightDecayOptimizer(OptimizationFunction):\n",
+    "    def __call__(self, \n",
+    "                 modelLayer, \n",
+    "                 hyperParameters: HyperParameters):\n",
+    "        modelLayer.data.mul_(1 - hyperParameters.learningRate * hyperParameters.weightDecay)\n",
+    "        return super().__call__(modelLayer, hyperParameters)\n",
+    "    \n",
+    "class MomentumOptimizer(OptimizationFunction):\n",
+    "    \n",
+    "    def __init__(self)-> None:\n",
+    "        super().__init__()\n",
+    "        self._state = {}\n",
+    "        \n",
+    "    def __call__(self, \n",
+    "                 modelLayer, \n",
+    "                 hyperParameters: HyperParameters):\n",
+    "        if modelLayer not in self._state:\n",
+    "            self._state[modelLayer] = {\n",
+    "                'averageGradient': torch.zeros_like(modelLayer.grad.data)\n",
+    "            }\n",
+    "        modelLayerState = self._state[modelLayer]\n",
+    "        modelLayerState['averageGradient'].mul_(hyperParameters.momentum).add_(modelLayer.grad.data)\n",
+    "        \n",
+    "        modelLayer.data.add_(-hyperParameters.learningRate, modelLayerState['averageGradient'])\n",
     "        return super().__call__(modelLayer, hyperParameters)"
    ],
    "metadata": {
@@ -253,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 51,
    "outputs": [],
    "source": [
     "class Optimizer:\n",
@@ -290,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 52,
    "outputs": [],
    "source": [
     "convolutionalModelSR2 = createBetterConvolutionModel(numberOfClasses, layerSizes)"
@@ -305,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 53,
    "outputs": [
     {
      "data": {
@@ -313,7 +340,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 16
+     "execution_count": 53
     }
    ],
    "source": [
@@ -330,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 54,
    "outputs": [
     {
      "data": {
@@ -338,7 +365,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 17
+     "execution_count": 54
     }
    ],
    "source": [
@@ -356,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "outputs": [],
    "source": [
     "class LearningRateRecorder:\n",
@@ -395,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 56,
    "outputs": [],
    "source": [
     "class TrainingSubscriber(StatisticsSubscriber, \n",
@@ -423,6 +450,7 @@
     "        learningRateSupplier = lambda: self._schedulingFunction(self.calculateCurrentProgress())\n",
     "        self._learningRateRecorder = LearningRateRecorder(learningRateSupplier )\n",
     "        return [\n",
+    "            WeightDecayOptimizer(),\n",
     "            LearningRateAnnealer(self._learningRateRecorder),\n",
     "            LearningRateOptimizer()  \n",
     "        ]\n",
@@ -457,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 57,
    "outputs": [],
    "source": [
     "class TeacherOptimized:\n",
@@ -524,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 58,
    "outputs": [],
    "source": [
     "#export\n",
@@ -547,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 59,
    "outputs": [],
    "source": [
     "validationSubscriber = ValidationSubscriber()\n"
@@ -562,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 60,
    "outputs": [],
    "source": [
     "weightScheduler, biasScheduler = createWeightAndBiasSchedulers()"
@@ -577,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 61,
    "outputs": [],
    "source": [
     "trainingSubscriber = TrainingSubscriber(schedulingFunction=weightScheduler)"
@@ -592,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 62,
    "outputs": [],
    "source": [
     "teacher = TeacherEnhanced(imageDataBunch, \n",
@@ -610,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 63,
    "outputs": [],
    "source": [
     "convolutionalModelSR1 = createBetterConvolutionModel(numberOfClasses, layerSizes)\n"
@@ -625,15 +653,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 64,
    "outputs": [
     {
      "data": {
-      "text/plain": "tensor(0.0991)"
+      "text/plain": "tensor(0.0990)"
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 27
+     "execution_count": 64
     }
    ],
    "source": [
@@ -649,17 +677,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 65,
    "outputs": [
     {
      "name": "stdout",
      "text": [
-      "Epoch #0 Training: Loss 1.6704224348068237 Accuracy 0.37768709659576416\n",
-      "Epoch #0 Validation: Loss 0.0 Accuracy 0.7714596390724182\n",
-      "Epoch #1 Training: Loss 0.22733783721923828 Accuracy 0.9278463125228882\n",
-      "Epoch #1 Validation: Loss 0.0 Accuracy 0.9296875\n",
-      "Epoch #2 Training: Loss 0.08479616045951843 Accuracy 0.9735270738601685\n",
-      "Epoch #2 Validation: Loss 0.0 Accuracy 0.9739912748336792\n"
+      "Epoch #0 Training: Loss 1.4858148097991943 Accuracy 0.4604896605014801\n",
+      "Epoch #0 Validation: Loss 0.0 Accuracy 0.8376186490058899\n",
+      "Epoch #1 Training: Loss 0.2262604534626007 Accuracy 0.9327229261398315\n",
+      "Epoch #1 Validation: Loss 0.0 Accuracy 0.9191060066223145\n",
+      "Epoch #2 Training: Loss 0.08383070677518845 Accuracy 0.9738256335258484\n",
+      "Epoch #2 Validation: Loss 0.0 Accuracy 0.9694422483444214\n"
      ],
      "output_type": "stream"
     }
@@ -687,21 +715,21 @@
      "is_executing": false
     }
    },
-   "execution_count": 29,
+   "execution_count": 66,
    "outputs": [
     {
      "data": {
-      "text/plain": "tensor(0.9737)"
+      "text/plain": "tensor(0.9691)"
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 29
+     "execution_count": 66
     }
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 67,
    "outputs": [
     {
      "data": {
@@ -727,15 +755,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 68,
    "outputs": [
     {
      "data": {
-      "text/plain": "[<matplotlib.lines.Line2D at 0x10cecaa58>]"
+      "text/plain": "[<matplotlib.lines.Line2D at 0x1317d0550>]"
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 31
+     "execution_count": 68
     },
     {
      "data": {
@@ -762,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 69,
    "outputs": [
     {
      "data": {
@@ -770,12 +798,10 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 32
+     "execution_count": 69
     }
    ],
-   "source": [
-    "weightScheduler(trainingSubscriber.calculateCurrentProgress() - 1e-6)"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -787,6 +813,11 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## Todo: \n",
+    "\n",
+    "- Weight Decay\n",
+    "\n",
+    "\n",
     "## Things to look at later\n",
     "\n",
     "- Learning Rate Capping\n",
@@ -802,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 69,
    "outputs": [],
    "source": [
     "\n"
