--- a/nbs/dl2/09c_add_progress_bar.ipynb
+++ b/nbs/dl2/09c_add_progress_bar.ipynb
@@ -102,7 +102,8 @@
     "# export \n",
     "class AvgStatsCallback(Callback):\n",
     "    def __init__(self, metrics):\n",
-    "        self.train_stats,self.valid_stats = AvgStats(metrics,True),AvgStats(metrics,False)\n",
+    "        self.train_stats,self.valid_stats = AvgStats(metrics,True),\\\n",
+    "                                            AvgStats(metrics,False)\n",
     "    \n",
     "    def begin_fit(self):\n",
     "        met_names = ['loss'] + [m.__name__ for m in self.train_stats.metrics]\n",
@@ -226,6 +227,27 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
